[package]
name = "image-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.23.0"
image = {version = "0.24", features = ["png"], default-features = false}
rusttype = "0.9"

hyper = {version = "0.14", features = ["server", "http1", "runtime"], optional = true}
tokio = {version = "1", features = ["rt-multi-thread"] optional = true}
json = {version = "0.12.4", optional = true}